--- a/projects/AlgoHealX-frontend/package.json
+++ b/projects/AlgoHealX-frontend/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@blockshake/defly-connect": "^1.2.1",
     "@hookform/resolvers": "^3.10.0",
     "@perawallet/connect": "^1.4.2",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -42,6 +43,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.76.0",
     "@tanstack/react-query": "^5.83.0",
+    "@txnlab/use-wallet": "^4.3.1",
     "@types/qrcode": "^1.5.5",
     "algosdk": "^3.5.2",
     "class-variance-authority": "^0.7.1",
@@ -52,13 +54,14 @@
     "input-otp": "^1.4.2",
     "jsqr": "^1.4.0",
     "lucide-react": "^0.462.0",
+    "lute-connect": "^1.6.3",
     "next-themes": "^0.3.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
-    "react-qr-scanner": "^1.0.0-alpha.11",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "react-webcam": "^7.2.0",
